--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/sanjanarao1803/E-Commerce",
+  "homepage": "http://sanjanarao1803.github.io/E-Commerce/",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
